...
        android:layout_height="1dp"
        android:background="@color/black_very_light"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="25sp"/>

    <Button
        android:id="@+id/btn_calendar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_calendar"
        android:layout_marginHorizontal="160dp"
        android:layout_marginBottom="20dp"
        android:text="SWITCH TO CALENDAR VIEW"
...
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorSecondary"/>

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorSecondary"
        android:dividerHeight="10dp"
        android:footerDividersEnabled="true"/>

...
