...
        android:layout_height="1dp"
        android:background="@color/black_very_light"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="25sp"/>

    <Button
        android:id="@+id/btn_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="160dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_bullet_list"
...
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorSecondary"/>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_selectionColor="#5BB0FF"
        app:mcv_showOtherDates="all" />

</TableLayout>
...
