...
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="venus"
            android:text="Venus" />

        <Button
            android:id="@+id/btn_earth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_earth"
            android:drawablePadding="15dp"
...
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="jupiter"
            android:text="jupiter" />

        <Button
            android:id="@+id/btn_saturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_saturn"
            android:drawablePadding="15dp"
...
